<resources>
    <string name="app_name">Zadanie6</string>
    <string name="loading">Загрузка...</string>
    <string name="name_surname">Константинов Денис</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="date">01 февраля 1980</string>
    <string name="sfera_deyatelnodti">Сфера деятельности</string>
    <string name="sfera_more">Хирургия, травмотология</string>
    <string name="notification">Получать  push-уведомления</string>
    <string name="vashi_druzya">Ваши друзья</string>
    <string name="person_dmitry">Дмитрий Валерьевич</string>
    <string name="person_evgeniy">Евгений Александров</string>
    <string name="person_viktor">Виктор Кузнецов</string>
    <string name="exit_accaunt">Выйти из аккаунта</string>
    <string name="foto">Выбрать фото</string>
    <string name="snimok">Сделать снимок</string>
    <string name="udalit">Удалить</string>
    <string name="Pomoch">Помочь</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Category">Выберите категорию помощи</string>
    <string name="Tab1">По мероприятиям</string>
    <string name="Tab2">По НКО</string>
    <string name="keywords_news">Ключевые слова: мастер-класс, помощь\nРезультаты поиска: 109 мероприятий</string>
    <string name="News_tittle">Новости</string>
    <string name="news1">Спонсоры отремонтируют \nшколу-интернат</string>
    <string name="news1text">Дубовская школа-интернат для детей \nс ограниченными возможностями \nздоровья стала первой в области ...</string>
    <string name="date1">Осталось 13 дней (21.09 - 20.10)</string>
    <string name="news2">Конкурс по вокальному \nпению в детском доме №6</string>
    <string name="filtr">Фильтр</string>
    <string name="filtrTitle">Как вы хотите помочь?</string>
    <string name="nazvanie_fonda">Благотворительный фонд \"Счастливый мир\"</string>
    <string name="organization_adress">Санкт-Петербург, Кирочная улица,\nд. 50А, каб. 208</string>
    <string name="organization_phone">+7 (937) 037 37-73\n+7 (937) 016 16-16</string>
    <string name="organization_mail">У вас есть вопросы? <a href="http://ya.ru">Напишите нам</a></string>
    <string name="organization_text">Участники и болельщики смогли весело и активно провести время на «Петербургском благотворительном марафоне» и при этом финансово поучаствовать в помощи детям.\n\nПри этом финансово поучаствовать в помощи детям. При этом финансово поучаствовать в помощи детям.</string>
    <string name="organization_link"><a href="http://#">Перейти на сайт организации</a></string>
    <string name="chislo_102">+102</string>
</resources>