<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="300dp"> <!-- здесь что-то с высотой нужно менять-->


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:backgroundTint="#66a636"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
                >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Профиль"
                        android:textAllCaps="false"
                        android:textColor="#FFF"
                        android:textSize="21sp"
                        android:textStyle="bold"
                         />

                    <ImageView
                        android:id="@+id/man_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:scaleType="fitEnd"
                        app:srcCompat="@drawable/pancel" />


                </RelativeLayout>


            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:adjustViewBounds="true"
                android:fitsSystemWindows="true"
                android:onClick="showDialog"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/image_man" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/NestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/roboto"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/name_surname"
                    android:textSize="24sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/black_38"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/black_87"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/sfera_deyatelnodti"
                    android:textColor="@color/black_38"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sfera_more"
                    android:textColor="@color/black_87"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp" />

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notification"
                        android:textColor="@color/black_87"
                        android:textSize="16sp" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:checked="true"
                        android:showText="false"
                        android:thumbTint="@drawable/newtrack"
                        app:trackTint="@drawable/newthumb" />
                </TableRow>


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cool_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">



                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/vashi_druzya"
                    android:textColor="@color/black_38"
                    android:textSize="12sp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="20dp"
                        app:srcCompat="@drawable/avatar_1" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/person_dmitry"
                        android:textColor="@color/black_87"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="20dp"
                        app:srcCompat="@drawable/avatar_2" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/person_evgeniy"
                        android:textColor="@color/black_87"
                        android:textSize="16sp" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="20dp"
                        app:srcCompat="@drawable/avatar_3" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/person_viktor"
                        android:textColor="@color/black_87"
                        android:textSize="16sp" />

                </TableRow>



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cool_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="130dp">


                <Button
                    android:id="@+id/button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/leaf"
                    android:text="@string/exit_accaunt"
                    android:textSize="14sp"
                    app:cornerRadius="3dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_anchor="@id/BottomNavagation"
        android:background="@color/border"
        />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNavagation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/white"
        app:itemIconTint="@drawable/button_nav_selector"
        app:itemTextColor="@drawable/button_nav_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="labeled"
        app:itemIconSize="24dp"
        />



    <!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/turtle_green"
        android:src="@drawable/round_favorite_24"
        app:layout_anchor="@id/BottomNavagation"
        app:layout_anchorGravity="bottom|center"
        app:maxImageSize="30dp"
        />
        -->


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/melon"
        app:shapeAppearanceOverlay="@style/button_circle_float"
        app:icon="@drawable/round_favorite_white"
        app:iconSize="24dp"
        app:iconTint="@color/white"
        app:layout_anchor="@id/BottomNavagation"
        app:layout_anchorGravity="bottom|center"
       />



</androidx.coordinatorlayout.widget.CoordinatorLayout>