<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="28dp"
        android:paddingBottom="28dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="43dp">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="30dp"
                app:srcCompat="@drawable/upload" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="@string/foto"
                android:textColor="@color/black_87"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="43dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="30dp"
                app:srcCompat="@drawable/camera" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="@string/snimok"
                android:textColor="@color/black_87"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="30dp"
                app:srcCompat="@drawable/delete" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="@string/udalit"
                android:textColor="@color/black_87"
                android:textSize="16sp" />
        </TableRow>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>