<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:backgroundTint="@color/turtle_green"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageItem"
                    android:layout_width="match_parent"
                    android:layout_height="259dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/news1" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="match_parent"
                    android:layout_height="259dp"
                    app:srcCompat="@drawable/fade" />
            </FrameLayout>

            <TextView
                android:id="@+id/titleItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/officiana_font"
                android:gravity="center"
                android:text="@string/news1"
                android:textColor="@color/blue_grey"
                android:textSize="21sp"
                app:lineHeight="34sp" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/decor" />

            <TextView
                android:id="@+id/descriptionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ellipsize="end"
                android:maxLength="100"
                android:maxLines="3"
                android:text="@string/news1text"
                android:textAlignment="center"
                android:textColor="@color/black_70"
                android:textSize="14sp"
                app:lineHeight="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/dataNovost1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/turtle_green"
            android:drawableLeft="@drawable/icon_calendar"
            android:maxLines="1"
            android:text="@string/date1"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="0dp"
            app:lineHeight="16sp" />


    </FrameLayout>

</LinearLayout>
